[gd_scene load_steps=2 format=3 uid="uid://bxhvg5m8qtw6f"]

[ext_resource type="Script" path="res://scripts/ui/stat_upgrade_menu.gd" id="1_stat_menu"]

[node name="StatUpgradeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stat_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "CHOOSE AN UPGRADE"
horizontal_alignment = 1

[node name="PointsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Points Available: 1"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Current Stats"

[node name="AttributesContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="BrutalityButton" type="Button" parent="Panel/VBoxContainer/AttributesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+1 BRUTALITY (Physical Power)"

[node name="SpiritButton" type="Button" parent="Panel/VBoxContainer/AttributesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+1 SPIRIT (Mana & Regen)"

[node name="IntelligenceButton" type="Button" parent="Panel/VBoxContainer/AttributesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+1 INTELLIGENCE (Magic Power)"

[node name="DexterityButton" type="Button" parent="Panel/VBoxContainer/AttributesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+1 DEXTERITY (Precision & Ranged)"

[node name="AgilityButton" type="Button" parent="Panel/VBoxContainer/AttributesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+1 AGILITY (Evasion & Speed)"

[node name="LuckButton" type="Button" parent="Panel/VBoxContainer/AttributesContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+1 LUCK (Loot & Crit)"

